agora-kubernetes-components/kustomization/base/istio/request-authentication.yaml
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: require-jwt
  namespace: city-services
spec:
  jwtRules:
    - issuer: "https://idp.agora.woven-city.internal"
      jwksUri: "https://idp.agora.woven-city.internal/.well-known/jwks.json"
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: require-jwt
  namespace: inventors
spec:
  jwtRules:
    - issuer: "https://auth.agora.woven-city.global"
      jwksUri: "https://auth.agora.woven-city.global/.well-known/jwks.json"
